--- a/site_2.html
+++ b/site_2.html
@@ -193,10 +193,11 @@
         </div> <!--end of left-content-->
 
         <div class="col-md-6" id="content-r"> <!--right-content-->
+            <h2> Đây là quà nhé !</h2>
             <div class="col-12 mt-5 d-flex justify-content-center">
                 <div class="box">
                     <div class="box-body">
-                        <img class="img" src="https://via.placeholder.com/150">
+                        <img class="img" src="img/anh.JPEG">
                         <div class="box-lid">
 
                             <div class="box-bowtie"></div>
