--- a/site_2.html
+++ b/site_2.html
@@ -210,8 +210,9 @@
 
     </div>
 
-    <div>
-
+    <div class="footer">
+        <h2> Thật ra là có cái này nữa sau 1 khoảng thời gian nằm vùng (thật ra là stalk) thì t nghĩ m sẽ thích</h2>
+        <a href="https://sonha1612.github.io/ptlp/heart.html"> Click đây nhé </a>    
     </div>
 
     <script src="js/Jquery.js"></script>
