--- a/site_2.html
+++ b/site_2.html
@@ -211,7 +211,7 @@
     </div>
 
     <div class="footer">
-        <h2> Thật ra là có cái này nữa, sau 1 khoảng thời gian nằm vùng (thật ra là stalk) t thấy khá là xinh nên t nghĩ m sẽ thích</h2>
+        <h2> Thật ra là có cái này nữa, sau 1 khoảng thời gian nằm vùng (thật ra là stalk). T làm xong thấy khá là xinh nên t nghĩ m sẽ thích </h2>
         <h3> </h3>
         <a href="https://sonha1612.github.io/ptlp/heart.html"> Click đây nhé </a>    
     </div>
