--- a/site_2.html
+++ b/site_2.html
@@ -194,6 +194,7 @@
 
         <div class="col-md-6" id="content-r"> <!--right-content-->
             <h2> Đây là quà nhé !</h2>
+            <h5> Quà này tí nữa chờ xem chỗ khác cho rõ :></h5>   
             <div class="col-12 mt-5 d-flex justify-content-center">
                 <div class="box">
                     <div class="box-body">
